--- a/FrontToBack/FrontToBack/Areas/AdminArea/Views/Slider/Update.cshtml
+++ b/FrontToBack/FrontToBack/Areas/AdminArea/Views/Slider/Update.cshtml
@@ -4,7 +4,7 @@
 <div class="container">
     <form class="forms-sample" method="post" asp-action="Update" enctype="multipart/form-data">
         <div class="form-group">
-            <img src="~/assets/img/@Model.Image" />
+            <img src="~/assets/img/@Model.Image" style="width:200px;height:200px;border-radius:10%"/>
             <br />
             @*For Naming Label*@
             <label asp-for="Photo"></label>
